--- a/index.html
+++ b/index.html
@@ -28,6 +28,9 @@
                 H: Hide Obstacles<br/>
                 T: Transparent Obstacles<br/>
             </p>
+            <p>
+                Note: The page may get unresponsive for a while if the simulation is off and a time-consuming algorithm like RRT is executed.
+            </p>
         </div>
     </div>
     <div id="result">
